@@ -64,7 +64,7 @@ namespace WebCore {
     class String;
     class Widget;
 
-    struct ResourceRequest;
+    class ResourceRequest;
 
     typedef void (FrameLoader::*FramePolicyFunction)(PolicyAction);
 
